k8s/apps/iwashi/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iwashi
    app.kubernetes.io/name: iwashi
  name: iwashi
  namespace: iwashi-system
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: iwashi
    app.kubernetes.io/name: iwashi
