k8s/apps/iwashi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iwashi
  namespace: iwashi-system
spec:
  hostnames:
    - iwashi.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: iwashi
          port: 8080
