k8s/apps/iwashi/ciliumnetworkpolicy-oidc.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: iwashi-oidc-egress
  namespace: iwashi-system
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'
    - toFQDNs:
        - matchName: auth.walnuts.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: iwashi
