k8s/apps/iwashi/networkpolicy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iwashi-egress
  namespace: iwashi-system
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 5432
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: databases
          podSelector:
            matchLabels:
              cnpg.io/cluster: postgresql-default
              cnpg.io/instanceRole: primary
    - ports:
        - port: 8080
          protocol: TCP
      to:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/component
                operator: In
                values:
                  - alertmanager
                  - distributor
                  - querier
                  - ruler
            matchLabels:
              app.kubernetes.io/instance: iwashi-cortex
              app.kubernetes.io/name: cortex
  podSelector:
    matchLabels:
      app.kubernetes.io/name: iwashi
  policyTypes:
    - Egress
